deployment/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: library-management
  template:
    metadata:
      labels:
        app: library-management
    spec:
      containers:
        - name: library-management
          image: souptiktat/library-management-system:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
