deployment/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: library-service
spec:
  selector:
    app: library-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
